# videoanalysis2

./: .gitignore  CMakeLists.txt  README.md  dictionary.xml
doc/: doc.tex  main.bib
src/: main.cpp  main.h
